--- a/cosmos_django/Jenkinsfile
+++ b/cosmos_django/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
         }
         stage('Test') {
             steps {
-                echo 'Tesdting..'
+                echo 'Tesdtfing..'
             }
         }
         stage('Deploy') {
