--- a/cosmos_django/Jenkinsfile
+++ b/cosmos_django/Jenkinsfile
@@ -5,8 +5,10 @@ pipeline {
         stage('Checkout') {
             steps {
                 sh 'ls'
-                sh 'chmod +x ./cosmos_django/jenkins_scripts/checkout.sh'
-                sh './cosmos_django/jenkins_scripts/checkout.sh'
+                sh 'virtualenv venv -p python3.6'
+                sh '. venv/bin/activate'
+                sh 'venv/bin/pip install -r cosmos_django/requirements.txt'
+                sh 'venv/bin/python3.6 cosmos_django/manage.py test -p *_test.py'
             }
         }
         stage('Test') {
