Add test script

--- a/cosmos_django/Jenkinsfile
+++ b/cosmos_django/Jenkinsfile
@@ -10,7 +10,8 @@ pipeline {
         }
         stage('Test') {
             steps {
-                echo 'Tesdtfing..'
+                sh 'chmod +x ./cosmos_django/jenkins_scripts/checkout.sh'
+                sh './cosmos_django/jenkins_scripts/checkout.sh'
             }
         }
         stage('Deploy') {
