--- a/cosmos_django/mypy.ini
+++ b/cosmos_django/mypy.ini
@@ -1,5 +1,5 @@
 [mypy]
-plugins = mypy_django_plugin.main
+plugins = mypy_django_plugin.main, mypy_drf_plugin.main
 
 [mypy-cosmos_django.settings,cosmos_django.asgi]
 ignore_errors = True
