--- a/cosmos_django/requirements.txt
+++ b/cosmos_django/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.2.7
 astroid==2.4.1
 Django==3.0.6
+django-cors-headers==3.3.0
 django-stubs==1.5.0
 djangorestframework==3.11.0
 djangorestframework-stubs==1.2.0
