--- a/cosmos_django/requirements.txt
+++ b/cosmos_django/requirements.txt
@@ -10,6 +10,7 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 mypy==0.770
 mypy-extensions==0.4.3
+Pillow==7.1.2
 psycopg2-binary==2.8.5
 pylint==2.5.2
 pytz==2020.1
