Add create user endpoint

--- a/cosmos_django/mypy.ini
+++ b/cosmos_django/mypy.ini
@@ -9,3 +9,6 @@ ignore_errors = True
 
 [mypy.plugins.django-stubs]
 django_settings_module = "cosmos_django.settings"
+
+[mypy-knox.*]
+ignore_missing_imports = True
