--- a/cosmos_django/mypy.ini
+++ b/cosmos_django/mypy.ini
@@ -10,5 +10,5 @@ ignore_errors = True
 [mypy.plugins.django-stubs]
 django_settings_module = "cosmos_django.settings"
 
-[mypy-knox.*]
+[mypy-rest_framework_simplejwt.*]
 ignore_missing_imports = True
