--- a/cosmos_django/Jenkinsfile
+++ b/cosmos_django/Jenkinsfile
@@ -33,12 +33,7 @@ pipeline {
             )
         }
         always {
-            emailext (
-                subject: "Cosmos Deployment FAILED: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'",
-                body: "FAILED: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]': Check console output at '${env.BUILD_URL}'",
-                to: 'darshanvkalola@gmail.com',
-                recipientProviders: [[$class: 'DevelopersRecipientProvider']]
-            )
+            emailext body: 'A Test EMail', recipientProviders: [[$class: 'DevelopersRecipientProvider'], [$class: 'RequesterRecipientProvider']], subject: 'Test'
         }
     }
 }
