--- a/cosmos_django/package.json
+++ b/cosmos_django/package.json
@@ -30,6 +30,7 @@
     "react-bootstrap": "^1.0.1",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-select": "^3.1.0"
   }
 }
