Add LiveServer tests

--- a/cosmos_django/mypy.ini
+++ b/cosmos_django/mypy.ini
@@ -12,3 +12,9 @@ django_settings_module = "cosmos_django.settings"
 
 [mypy-rest_framework_simplejwt.*]
 ignore_missing_imports = True
+
+[mypy-selenium.*]
+ignore_missing_imports = True
+
+[mypy-webdriver_manager.chrome.*]
+ignore_missing_imports = True
