--- a/cosmos_django/requirements.txt
+++ b/cosmos_django/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.2.7
 astroid==2.4.1
+certifi==2020.4.5.2
 cffi==1.14.0
+chardet==3.0.4
+colorama==0.4.3
+configparser==5.0.0
+crayons==0.3.1
 cryptography==2.9.2
 Django==3.0.6
 django-cors-headers==3.3.0
@@ -10,6 +15,7 @@ djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.4.0
 djangorestframework-stubs==1.2.0
+idna==2.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
@@ -21,6 +27,7 @@ pycparser==2.20
 PyJWT==1.7.1
 pylint==2.5.2
 pytz==2020.1
+requests==2.23.0
 selenium==3.141.0
 six==1.15.0
 sqlparse==0.3.1
@@ -28,5 +35,6 @@ toml==0.10.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.2
 urllib3==1.25.9
+webdriver-manager==3.1.0
 wrapt==1.12.1
 yapf==0.30.0
