--- a/cosmos_django/requirements.txt
+++ b/cosmos_django/requirements.txt
@@ -5,6 +5,7 @@ cffi==1.14.0
 chardet==3.0.4
 colorama==0.4.3
 configparser==5.0.0
+coverage==5.1
 crayons==0.3.1
 cryptography==2.9.2
 Django==3.0.6
