Add tests to models.py

--- a/cosmos_django/mypy.ini
+++ b/cosmos_django/mypy.ini
@@ -18,3 +18,6 @@ ignore_missing_imports = True
 
 [mypy-webdriver_manager.chrome.*]
 ignore_missing_imports = True
+
+[mypy-freezegun.*]
+ignore_missing_imports = True
