--- a/cosmos_django/requirements.txt
+++ b/cosmos_django/requirements.txt
@@ -16,6 +16,7 @@ djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.4.0
 djangorestframework-stubs==1.2.0
+freezegun==0.3.15
 idna==2.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
@@ -27,6 +28,7 @@ psycopg2-binary==2.8.5
 pycparser==2.20
 PyJWT==1.7.1
 pylint==2.5.2
+python-dateutil==2.8.1
 pytz==2020.1
 requests==2.23.0
 selenium==3.141.0
