--- a/cosmos_django/package.json
+++ b/cosmos_django/package.json
@@ -33,6 +33,9 @@
     "gts": "^2.0.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
     "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
