Add output js file to .gitignore

--- a/cosmos_django/.gitignore
+++ b/cosmos_django/.gitignore
@@ -26,6 +26,7 @@ frontend/src/constants/base_url_constant.tsx
 # Media and static
 /media/
 /static/
+frontend/static/frontend/main.js
 
 # Logging
 /logs/
