Rename files from .tsx to .ts

--- a/cosmos_django/.gitignore
+++ b/cosmos_django/.gitignore
@@ -21,7 +21,7 @@ node_modules/
 .mypy_cache/
 
 # Axios base URL
-frontend/src/constants/base_url_constant.tsx
+frontend/src/constants/base_url_constant.ts
 
 # Media and static
 /media/
