--- a/cosmos_django/package.json
+++ b/cosmos_django/package.json
@@ -49,6 +49,7 @@
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "jest": "^26.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
