--- a/cosmos_django/package.json
+++ b/cosmos_django/package.json
@@ -38,8 +38,10 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
     "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
