--- a/cosmos_django/package.json
+++ b/cosmos_django/package.json
@@ -56,8 +56,11 @@
     "react-burger-menu": "^2.6.15",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "ts-loader": "^7.0.5"
   }
 }
