--- a/cosmos_django/requirements.txt
+++ b/cosmos_django/requirements.txt
@@ -13,6 +13,7 @@ django-cors-headers==3.3.0
 django-rest-knox==4.1.0
 django-stubs==1.5.0
 djangorestframework==3.11.0
+djangorestframework-camel-case==1.2.0
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.4.0
 djangorestframework-stubs==1.2.0
