--- a/cosmos_django/package.json
+++ b/cosmos_django/package.json
@@ -32,6 +32,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.20.0",
     "gts": "^2.0.2",
+    "prettier": "2.0.5",
     "style-loader": "^1.2.1",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
