Add contact information panel

--- a/cosmos_django/mypy.ini
+++ b/cosmos_django/mypy.ini
@@ -21,3 +21,7 @@ ignore_missing_imports = True
 
 [mypy-freezegun.*]
 ignore_missing_imports = True
+
+[mypy-phonenumber_field.*]
+ignore_missing_imports = True
+
