--- a/cosmos_django/requirements.txt
+++ b/cosmos_django/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.2.7
 astroid==2.4.1
+Babel==2.8.0
 certifi==2020.4.5.2
 cffi==1.14.0
 chardet==3.0.4
@@ -10,6 +11,7 @@ crayons==0.3.1
 cryptography==2.9.2
 Django==3.0.6
 django-cors-headers==3.3.0
+django-phonenumber-field==4.0.0
 django-rest-knox==4.1.0
 django-stubs==1.5.0
 djangorestframework==3.11.0
@@ -24,6 +26,7 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 mypy==0.770
 mypy-extensions==0.4.3
+phonenumbers==8.12.6
 Pillow==7.1.2
 psycopg2-binary==2.8.5
 pycparser==2.20
