--- a/cosmos_django/mypy.ini
+++ b/cosmos_django/mypy.ini
@@ -25,3 +25,6 @@ ignore_missing_imports = True
 [mypy-phonenumber_field.*]
 ignore_missing_imports = True
 
+[mypy-annoying.fields.*]
+ignore_missing_imports = True
+
