--- a/cosmos_django/requirements.txt
+++ b/cosmos_django/requirements.txt
@@ -10,6 +10,7 @@ coverage==5.1
 crayons==0.3.1
 cryptography==2.9.2
 Django==3.0.6
+django-annoying==0.10.6
 django-cors-headers==3.3.0
 django-phonenumber-field==4.0.0
 django-rest-knox==4.1.0
