--- a/cosmos_django/package.json
+++ b/cosmos_django/package.json
@@ -31,6 +31,7 @@
     "eslint": "^7.3.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-tsdoc": "^0.2.5",
     "gts": "^2.0.2",
     "prettier": "2.0.5",
     "style-loader": "^1.2.1",
