--- a/cosmos_django/package.json
+++ b/cosmos_django/package.json
@@ -10,9 +10,9 @@
     "clean": "gts clean",
     "compile": "tsc",
     "fix": "gts fix",
-    "prepare": "npm run compile",
+    "test": "jest",
     "pretest": "npm run compile",
-    "posttest": "npm run check"
+    "prepare": "npm run compile"
   },
   "keywords": [],
   "author": "",
@@ -22,9 +22,11 @@
     "@babel/polyfill": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
+    "@types/jest": "^26.0.4",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-jest": "^26.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^3.5.3",
@@ -33,9 +35,12 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-tsdoc": "^0.2.5",
     "gts": "^2.0.2",
+    "jest": "^26.1.0",
     "prettier": "2.0.5",
+    "redux-mock-store": "^1.5.4",
     "style-loader": "^1.2.1",
-    "typescript": "^3.8.3",
+    "ts-jest": "^26.1.1",
+    "typescript": "^3.9.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
@@ -53,6 +58,8 @@
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "fetch-mock": "^9.10.3",
+    "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-burger-menu": "^2.6.15",
