Refactor and add tests

--- a/cosmos_django/mypy.ini
+++ b/cosmos_django/mypy.ini
@@ -7,6 +7,9 @@ ignore_errors = True
 [mypy-*.migrations.*]
 ignore_errors = True
 
+[mypy-main.custom_permissions.py]
+ignore_errors = True
+
 [mypy.plugins.django-stubs]
 django_settings_module = "cosmos_django.settings"
 
@@ -20,9 +23,6 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-freezegun.*]
-ignore_missing_imports = True
-
-[mypy-phonenumber_field.*]
 ignore_missing_imports = True
 
 [mypy-annoying.fields.*]
