--- a/cosmos_django/.eslintrc.json
+++ b/cosmos_django/.eslintrc.json
@@ -28,7 +28,8 @@
   "rules": {
     "indent": [
       "error",
-      4
+      4,
+      {"SwitchCase": 1}
     ],
     "tsdoc/syntax": "warn",
     "require-jsdoc": 0,
@@ -38,7 +39,12 @@
       "ignore"
     ],
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-unused-vars-experimental": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-this-alias": "off",
+    "@typescript-eslint/no-non-null-assertion": "off"
   },
   "settings": {
     "react": {
