--- a/cosmos_django/requirements.txt
+++ b/cosmos_django/requirements.txt
@@ -33,6 +33,8 @@ psycopg2-binary==2.8.5
 pycparser==2.20
 PyJWT==1.7.1
 pylint==2.5.2
+pylint-django==2.1.0
+pylint-plugin-utils==0.6
 python-dateutil==2.8.1
 pytz==2020.1
 requests==2.23.0
