--- a/cosmos_django/package.json
+++ b/cosmos_django/package.json
@@ -60,6 +60,7 @@
     "bootstrap": "^4.5.0",
     "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
